--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 
     <body>
         <h1>Title</h1>
+
+        <script src="/lib/jquery.js"></script>
+        <script src="/navbar/loadnavbar.js"></script>
     </body>
 </html>
