--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
     <head>
         <title>TheAlexDev</title>
+
+        <link rel="stylesheet" href="/navbar/navbar.css">
     </head>
 
     <body>
