Series of chagnes I'm too lazy to document

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </head>
 
     <body>
-        <h1>Title</h1>
+        <div style="position:absolute; top: 0; right: 0; width: 750px; height: 100px; border-radius: 50px; background-color: #EE6C4D;"></div>
+
+        <h1 style="font-family: montserrat;">Alexander Karpukhin, web developer</h1>
+
 
         <script src="/lib/jquery.js"></script>
         <script src="/navbar/loadnavbar.js"></script>
