--- a/index.html
+++ b/index.html
@@ -3,15 +3,54 @@
 <html lang="en">
     <head>
         <title>TheAlexDev</title>
-
         <link rel="stylesheet" href="/navbar/navbar.css">
+
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,900;1,300&display=swap');
+        </style>
     </head>
 
     <body>
-        <div style="position:absolute; top: 0; right: 0; width: 750px; height: 100px; border-radius: 50px; background-color: #EE6C4D;"></div>
+        <h1 style="font-family: 'Montserrat' sans-serif;">Alexander Karpukhin, web developer</h1>
 
-        <h1 style="font-family: montserrat;">Alexander Karpukhin, web developer</h1>
 
+        <div style="
+        position:absolute;
+        top: -15px; 
+        right: -25px;
+
+        width: 950px; 
+        height: 300px; 
+        
+        border-radius: 50px; 
+        background-color: #EE6C4D;"></div>
+
+        <div>
+            <div>
+                <form
+                    action="https://formspree.io/f/xdobbaal"
+                    method="POST">
+
+                    <p style="font-family:'Montserrat' sans-serif; font-weight: bold;">Contact me</p>
+                    <input placeholder="Enter your email here" type="email" name="email">
+                    <textarea placeholder="Enter your message" name="message"></textarea>
+                    <button type="submit">Send</button>
+                </form>
+
+                <div style="
+                width: 500px;
+                height: 500px;
+
+                margin-top: -100px;
+
+                border-radius: 50px; 
+                background-color: #EE6C4D;
+
+                position: relative;
+                right: 125px;
+                bottom: 125px;"></div>
+            </div>
+        </div>
 
         <script src="/lib/jquery.js"></script>
         <script src="/navbar/loadnavbar.js"></script>
