--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <div style="
         position:absolute;
+        z-index: -5;
         top: -15px; 
         right: -25px;
 
@@ -30,6 +31,7 @@
                 <form
                     action="https://formspree.io/f/xdobbaal"
                     method="POST">
+                    
 
                     <p style="font-family:'Montserrat' sans-serif; font-weight: bold;">Contact me</p>
                     <input placeholder="Enter your email here" type="email" name="email">
@@ -38,17 +40,17 @@
                 </form>
 
                 <div style="
-                width: 500px;
-                height: 500px;
+                width: 350px;
+                height: 220px;
 
-                margin-top: -100px;
+                z-index: -5;
 
-                border-radius: 50px; 
+                border-radius: 110px; 
                 background-color: #EE6C4D;
 
                 position: relative;
                 right: 125px;
-                bottom: 125px;"></div>
+                bottom: 125px;"></div>                
             </div>
         </div>
 
