--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <head>
         <title>TheAlexDev</title>
         <link rel="stylesheet" href="/navbar/navbar.css">
-
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,900;1,300&display=swap');
-        </style>
     </head>
 
     <body>
@@ -17,16 +13,16 @@
         <div style="
         position:absolute;
         z-index: -5;
-        top: -15px; 
-        right: -25px;
+        top: -45px; 
+        right: -55px;
 
-        width: 950px; 
+        width: 750px; 
         height: 300px; 
         
-        border-radius: 50px; 
+        border-radius: 150px; 
         background-color: #EE6C4D;"></div>
 
-        <div>
+        <div style="position: relative; top: -55px;">
             <div>
                 <form
                     action="https://formspree.io/f/xdobbaal"
@@ -34,27 +30,34 @@
                     
 
                     <p style="font-family:'Montserrat' sans-serif; font-weight: bold;">Contact me</p>
-                    <input placeholder="Enter your email here" type="email" name="email">
-                    <textarea placeholder="Enter your message" name="message"></textarea>
-                    <button type="submit">Send</button>
-                </form>
-
-                <div style="
-                width: 350px;
-                height: 220px;
-
-                z-index: -5;
-
-                border-radius: 110px; 
-                background-color: #EE6C4D;
-
-                position: relative;
-                right: 125px;
-                bottom: 125px;"></div>                
+                    <input class="form-control" placeholder="Enter your email here" type="email" name="email">
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="Enter your message" name="message"></textarea>
+                    </div>
+                    <div class="form-check">
+                        <button class="btn btn-primary" type="submit">Send</button>
+                    </div>
+                </form>                
             </div>
+
+            <div style="
+            width: 350px;
+            height: 220px;
+
+            z-index: -5;
+
+            border-radius: 110px; 
+            background-color: #EE6C4D;
+
+            position: relative;
+            right: 125px;
+            bottom: 125px;"></div>
         </div>
 
         <script src="/lib/jquery.js"></script>
         <script src="/navbar/loadnavbar.js"></script>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
