some more changes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         border-radius: 150px; 
         background-color: #EE6C4D;"></div>
 
-        <div style="position: relative; top: -55px;">
-            <div>
+        <div style="position: relative; top: 55px;">
+            <div style="width: 100px;
+            height:350px;">
                 <form
                     action="https://formspree.io/f/xdobbaal"
                     method="POST">
