some other changes

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
 
             <div style="
-            width: 350px;
-            height: 220px;
+            width: 330px;
+            height: 280px;
 
             z-index: -5;
 
@@ -51,8 +51,8 @@
             background-color: #EE6C4D;
 
             position: relative;
-            right: 125px;
-            bottom: 125px;"></div>
+            right: 75px;
+            top: -15px;"></div>
         </div>
 
         <script src="/lib/jquery.js"></script>
