some other shit

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         background-color: #EE6C4D;"></div>
 
         <div style="position: relative; top: 55px;">
-            <div style="width: 100px;
-            height:350px;">
+            <div style="width: 200px;">
                 <form
                     action="https://formspree.io/f/xdobbaal"
                     method="POST">
@@ -52,7 +51,7 @@
 
             position: relative;
             right: 75px;
-            top: -15px;"></div>
+            top: -35px;"></div>
         </div>
 
         <script src="/lib/jquery.js"></script>
