--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
         <div style="
         position:absolute;
-        z-index: -5;
         top: -45px; 
         right: -55px;
 
@@ -20,7 +19,12 @@
         height: 300px; 
         
         border-radius: 150px; 
-        background-color: #EE6C4D;"></div>
+        background-color: #EE6C4D;
+        
+        z-index: -5;
+        overflow: hidden;
+        "
+        ></div>
 
         <div style="position: relative; top: 55px;">
             <div style="width: 200px;">
