--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li>
-            <a href="/index.html">Home</a>
+            <a href="/contact.html">Contact</a>
         </li>
 
         <li>
