some style changes

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,17 @@
 	</head>
 
 	<body>
-		<main>
+		<main style="justify-content: center;">
 			<div
 				style="
 					position: absolute;
-					left: calc(50vw - 275px);
-					top: calc(50vh - 275px);
+
+                    justify-content: center;
+
+					left: calc(50vw - 225px);
+					top: calc(50vh - 225px);
 				">
+
 				<div
 					style="
 						height: 450px;
