--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             width: 750px; 
             height: 300px; 
             
-            border-radius: 150px; 
+            border-bottom-left-radius: 150px;
             background-color: #EE6C4D;
             
             z-index: -5;
@@ -69,6 +69,13 @@
                 font-weight: lighter;
                 text-align: center;
             ">"I can build any website small or medium sized website for you and your business."</h2>
+
+            <div class="text-center" style="position: absolute; bottom: 2px; left:calc(50vw - 10px);">
+                <button style="position:relative;" class="btn btn-info" onclick="
+                    window.scrollBy(0, window.innerHeight);
+                ">Know More</button>
+            </div>
+
         </main>
 
         <script src="/lib/jquery.js"></script>
