--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <script>
-            window.location.href("/pages/index.html");
+            window.location.href = "/pages/index.html";
         </script>
     </body>
 </html>
