--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,5 +1,16 @@
 <html>
     <head>
-        <link rel="stylesheet"
+        <link rel="stylesheet" href="/navbar/navbar.css">
+        <link rel="stylesheet" href="/lib/bootstrap.css">
     </head>
+
+    <body>
+        <main>
+        </main>
+
+        <script src="/lib/jquery.js"></script>
+        <script src="/lib/bootstrap.js"></script>
+        
+        <script src="/navbar/loadnavbar.js"></script>
+    </body>
 </html>
