Responsive design changes for the mobile quote

--- a/pages/index.html
+++ b/pages/index.html
@@ -37,7 +37,9 @@
                 </div>
             </div>
 
-            <h2 class="quote">"I can build any small or medium sized website for you and your business."</h2>
+            <h2 class="quote-mobile">"I can build any small or medium sized website for you and your business."</h2>
+
+            <h2 class="quote-desktop">"I can build any small or medium sized website for you and your business."</h2>
         </main>
 
         <script src="/lib/jquery.js"></script>
