--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav>
-    <ul>
+    <ul style="padding-left: 0;">
         <li>
             <a href="/pages/contact.html">Contact</a>
         </li>
