--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/global.css">
         <link rel="stylesheet" href="/styles/index.css">
         <link rel="stylesheet" href="/styles/decorative-blobs.css">
+        <meta name="viewport" content="width=device-width, minimum-scale=1">
     </head>
 
     <body style="overflow-x: hidden;">
@@ -14,6 +15,8 @@
             <h1>Alexander Karpukhin, web developer</h1>
 
             <div id="index-blob1"></div>
+
+            <h2 class="quote-mobile">"I can build any small or medium sized website for you and your business."</h2>
 
             <div style="position:relative; top: 145px;">
                 <div id="index-blob2">
@@ -37,9 +40,7 @@
                 </div>
             </div>
 
-            <h2 class="quote-mobile">"I can build any small or medium sized website for you and your business."</h2>
-
-            <h2 class="quote-desktop">"I can build any small or medium sized website for you and your business."</h2>
+            <h2 class="quote">"I can build any small or medium sized website for you and your business."</h2>
         </main>
 
         <script src="/lib/jquery.js"></script>
