--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="/navbar/navbar.css" >
         <link rel="stylesheet" href="/global.css" >
+        <meta name="viewport" content="width=device-width, minimum-scale=1">
 	</head>
 
 	<body>
