Made contact page responsive to mobile phones

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,39 +2,16 @@
 	<head>
 		<link rel="stylesheet" href="/navbar/navbar.css" >
         <link rel="stylesheet" href="/global.css" >
+        <link rel="stylesheet" href="/styles/decorative-blobs.css">
+        <link rel="stylesheet" href="/styles/contact.css">
         <meta name="viewport" content="width=device-width, minimum-scale=1">
 	</head>
 
 	<body>
 		<main style="justify-content: center;">
-			<div
-				style="
-					position: absolute;
+			<div class="blob-wrapper">
 
-                    justify-content: center;
-
-					left: calc(50vw - 225px);
-					top: calc(50vh - 225px);
-				">
-
-				<div
-					style="
-						height: 450px;
-						width: 450px;
-
-						border-radius: 110px;
-
-						background-color: #ee6c4d;
-
-						position: absolute;
-
-						z-index: -5;
-
-                        display: flex;
-                        justify-content: center;
-                        
-					">
-                    
+				<div id="contact-blob1">
                     <div style="
                         position: relative;
                         top: 25%;
